# -

./: .gitignore  CMakeLists.txt  README.md  setup.bat  vcpkg.json  类关系文档.md  网络模块组件依赖关系.drawio  设计文档.md  项目出现的问题以及总结.docx
src/core/: CMakeLists.txt  app_config.h  base_manager.cpp  base_manager.h  core.cpp  core.h  message.cpp  message.h  utils.cpp  utils.h  word_data.h
src/dispatcher/: CMakeLists.txt  dispatcher.cpp  dispatcher.h  message_dispatcher.cpp  message_dispatcher.h
src/main_app/: CMakeLists.txt  main.cpp
src/network/: CMakeLists.txt  connection_manager.cpp  connection_manager.h  message_queue_manager.cpp  message_queue_manager.h  network.cpp  network.h  network_manager.cpp  network_manager.h  reconnection_manager.cpp  reconnection_manager.h
src/page_manager/: CMakeLists.txt  page_factory.cpp  page_factory.h  page_manager.cpp  page_manager.h  page_stack.cpp  page_stack.h  page_types.h
src/tests/: CMakeLists.txt  main.cpp  tst_composite_module.cpp  tst_core_app_configtest.cpp  tst_core_messagetest.cpp  tst_core_utils.cpp  tst_coretest.cpp  tst_dispatcher.cpp  tst_login_page.cpp  tst_messagetest.cpp  tst_network.cpp  tst_network_network_manager_nextconnecttest.cpp  tst_network_network_managetest.cpp  tst_page_controller.cpp  tst_page_factory.cpp  tst_page_manager.cpp  tst_page_stack.cpp  tst_register_page.cpp  tst_system_sidebar.cpp  tst_ui_base_test.cpp  tst_ui_interactive_wordcard.cpp  tst_ui_search_base.cpp  tst_ui_searchhistory_widget.cpp  tst_ui_word_card_test.cpp  tst_user_session.cpp
src/tests/unit/core/: core_test.h
src/ui/: CMakeLists.txt  ui.cpp  ui.h
src/ui/base/: base_widget.cpp  base_widget.h  test_window.cpp  test_window.h  test_word_card.cpp  test_word_card.h  word_card.cpp  word_card.h
src/ui/rec/: icons.qrc
src/ui/search/: search_base.cpp  search_base.h  searchhistory_widget.cpp  searchhistory_widget.h
src/ui/system/: system_sidebar.cpp  system_sidebar.h  theme_manager.cpp  theme_manager.h
src/ui/view/: collecte_page.cpp  collecte_page.h  login_page.cpp  login_page.h  main_page.cpp  main_page.h  page_controller.cpp  page_controller.h  register_page.cpp  register_page.h  vocabulary_page.cpp  vocabulary_page.h
src/ui/word/: interactive_wordcard.cpp  interactive_wordcard.h  word_card.cpp  word_card.h
src/user_session/: CMakeLists.txt  session_storage.cpp  session_storage.h  user_data.cpp  user_data.h  user_session.cpp  user_session.h
src/word_function/: CMakeLists.txt  export_manager.cpp  export_manager.h  word_collect.cpp  word_collect.h  word_data.h  word_search.cpp  word_search.h  word_vocabulary.cpp  word_vocabulary.h
